Adding the profile section and editing the settings page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
       - assets/animation.gif
       - assets/cloud.gif
       - assets/rain.gif
+      - assets/profilepic.jpeg
 
   fonts:
     - family: Montserrat
